[project]
name = "envlock"
version = "0.0.1"
description = "A secure CLI tool for encrypting, decrypting, shredding, and rotating secrets files using strong symmetric encryption."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nikhil John", email = "nikhiljohn1010@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["encryption", "secrets", "cli", "security", "cryptography", "locker", "vault", "file", "python"]
dependencies = [
    "click>=8.2.1",
    "cryptography>=45.0.4",
]

[project.scripts]
envlock = "main:cli"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/nikhiljohn10/envlock"
Issues = "https://github.com/nikhiljohn10/envlock/issues"

[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

